# apache-airflow-goodies

./: .gitignore  README.md  release.sh  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yaml
.github/workflows/: build_wheel.yaml  mdbook.yaml  mdbook.yml
airgoodies/aws/s3/: airgoodies.aws.s3.variables.json  wrapper.py
airgoodies/command/: airgoodies.command.parser.variable.json  command.py  parser.py
airgoodies/common/: exception.py  variables.py
airgoodies/mongo/: airgoodies.mongo.variables.json  connection.py
airgoodies/task/: airgoodies.aws.task.variables.json  aws_tasks.py
airgoodies/task/config/: task_configuration.py  variables.py
airgoodies/task/method/: transform.py
airgoodies/util/: annotation.py
airgoodies/xcom/: manager.py
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/examples/: overview.md
docs/src/examples/setup/: airflow_docker_s3_mongo_setup.md
docs/src/features/: overview.md  yaml.md
docs/src/features/tasks/: airgoodies.md
docs/src/features/tasks/s3/: load_from_s3_to_mongo_table.md
docs/src/features/tasks/s3/transform/: drop_columns.md  print_table_columns.md
docs/src/installation/: installation.md  pypi-installation.md  sources-installation.md
docs/src/intro/: introduction.md
tests/: test_imports.py
