[metadata]
name = apache-airflow-goodies
version = 0.0.1-alpha
author = Stavros Grigoriou
author_email = unix121@protonmail.com
description = Library that contains various goodies for Apache Airflow development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stav121/apache-airflow-goodies
      Bug Tracker = https://github.com/stav121/apache-airflow-goodies/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: <MIT License>
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
include-package-data = True

[options.package_data]
apache-airflow-goodies = py.typed